--- a/assignments/M7/Q_Sun_M7_assn.ipynb
+++ b/assignments/M7/Q_Sun_M7_assn.ipynb
@@ -35,7 +35,7 @@
     "| deny (dependent variable) | mortgage application denied ? |\n",
     "\n",
     "\n",
-    "For the column 'black', we'll use African American for this column in this study.\n",
+    "For the column 'black', I'll use African American for this column in this study.\n",
     "\n",
     "\n",
     "\n",
